fixed project container overflow
fixed overflow caused by setting viewport values to body element's height and width properties

--- a/style.css
+++ b/style.css
@@ -16,8 +16,6 @@ body {
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(6, 1fr);
   margin: 0;
-  height: 100vh;
-  width: 100vw;
 }
 
 h1 {
